Corrections for Sonar